development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job4j-devops-deployment
  labels:
    app: job4j-devops-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
        - name: calculator-container
          image: ashleygt/job4j_devops:v101
          ports:
            - containerPort: 8080
