ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  annotations:
    # Для Minikube может потребоваться другая аннотация
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: calculator.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calculator-service
                port:
                  number: 8080
